Multi updates that implicitly run createCollection can deadlock with a MultiUpdateCoordinator when trying to acquire the DDL lock

XMLWordPrintableJSON

    • Cluster Scalability
    • Fully Compatible
    • v8.0
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If we set the cluster parameter to block balancing during updateMany, an updateMany with {upsert: true} can trigger an implicit createCollection which can deadlock in trying to acquire a DDL lock for the target namespace since the MultiUpdateCoordinator is designed to hold the DDL lock to pause all concurrent DDL operations when executing a multi update.

            Assignee:
            Brett Nawrocki
            Reporter:
            Jason Zhang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: