SERVER-90157 Never coordinate multi upserts (#22829)

GitOrigin-RevId: 98991d605e11457c08fab3debd96dd957084d332